@@ -903,7 +903,7 @@ public class MT {
 	Petrol                  = create        ( 9864, "Petrol"                , SET_FLUID             , 255,   0,   0, 255).put(G_CONTAINERS, EXPLOSIVE, FLAMMABLE, "Gasoline")                                                                                                                                                                                                                                                       .heat( 100,  400).aspects(TC.MORTUUS, 1, TC.POTENTIA, 1),
 	Propane                 = create        ( 9865, "Propane"               , SET_FLUID             , 255,  20,  20, 255).put(G_CONTAINERS, EXPLOSIVE, FLAMMABLE)                                                                                                                                                                                                                                                                   .heat( 100,  200).aspects(TC.MORTUUS, 1, TC.POTENTIA, 1),
 	Butane                  = create        ( 9866, "Butane"                , SET_FLUID             , 255,  40,  40, 255).put(G_CONTAINERS, EXPLOSIVE, FLAMMABLE)                                                                                                                                                                                                                                                                   .heat( 100,  200).aspects(TC.MORTUUS, 1, TC.POTENTIA, 1),
-	Propylene               = create        ( 9867, "Propylene"             , SET_FLUID             ,  90,  60, 140, 255).put(G_CONTAINERS, EXPLOSIVE, FLAMMABLE)                                                                                                                                                                                                                                                                   .heat( 100,  200).aspects(TC.MORTUUS, 1, TC.POTENTIA, 1),
+   	Propylene               = create        ( 9867, "Propylene"             , SET_FLUID             ,  90,  60, 140, 255).put(G_CONTAINERS, EXPLOSIVE, FLAMMABLE)                                                                                                                                                                                                                                                                   .heat( 100,  200).aspects(TC.MORTUUS, 1, TC.POTENTIA, 1),
 	Ethylene                = create        ( 9868, "Ethylene"              , SET_FLUID             ,  64,  40, 100, 255).put(G_CONTAINERS, EXPLOSIVE, FLAMMABLE)                                                                                                                                                                                                                                                                   .heat( 100,  200).aspects(TC.MORTUUS, 1, TC.POTENTIA, 1),
 	Creosote                = create        ( 9870, "Creosote"              , SET_FLUID             , 128,  64,   0, 255).put(G_CONTAINERS, FLAMMABLE, LIQUID, "Creosote Oil")                                                                                                                                                                                                                                                      .heat( 100,  400).aspects(TC.ARBOR, 2, TC.LUX, 1),
 	FishOil                 = create        ( 9871, "Fish Oil"              , SET_FLUID             , 255, 196,   0, 255).put(G_CONTAINERS, FLAMMABLE, FOOD)                                                                                                                                                                                                                                                                        .heat( 100,  400).aspects(TC.CORPUS, 2, TC.LUX, 1),
@@ -960,8 +960,7 @@ public class MT {
 	Marshmallow             = wood          ( 9715, "Marshmallow"           , SET_FINE              , 255, 220, 220, 255).put(FOOD, MD.CANDY)                                                                                                                                                                                                                                                                                       .aspects(TC.FAMES, 1                   ).qual(1, 3.0, 24, 0),
 	LiveRoot                = dustcent      ( 8223, "LiveRoot"              , SET_WOOD              , 220, 200,   0, 255).put(TICKS_PER_SMELT   , WOOD, MORTAR, MAGICAL, MORTAR, MD.TF)                                                                                 .setMcfg( 3, Wood           , 3*U, Ma               , 1*U)                                                                                                  .aspects(TC.ARBOR, 1, TC.VICTUS     , 1).setLocal("Liveroot").setBurning(Ash, U9).heat(1178, 2465),
 	PetrifiedWood           = create        ( 8277, "Petrified Wood"        , SET_WOOD              , 110,  50,  35, 255).put(TICKS_PER_SMELT/ 4, G_STONE, STONE, WOOD, MORTAR, FLAMMABLE, MD.ERE)                                                                      .setMcfg( 0, Wood           , 1*U)                                                                                                                          .aspects(TC.ARBOR, 1, TC.TERRA      , 1).qual(1, 2.0, 24, 1).heat(350, 450),
-	
-	
+		
 	Wax                     = wax           ( 8235, "Wax"                                           , 250, 250, 250, 255)                                                                                                                                                                                                                                                                                                           .aspects(TC.PERDITIO    , 1).heat( 350),
 	WaxBee                  = wax           ( 8236, "WaxBee"                                        , 250, 250, 100, 255).put(MD.FR, FOOD, "BeesWax", "Beeswax", "BeeWax", "Beewax")                                                                                                                                                                                                                                                .aspects(TC.BESTIA      , 1).heat( 350).setLocal("Bees Wax"),
 	WaxRefractory           = wax           ( 8237, "WaxRefractory"                                 , 250,  50,  50, 255).put(MD.FR, UNBURNABLE, "RefractoryWax", "Refractorywax")                                                                                                                                                                                                                                                  .aspects(TC.GELUM       , 1).heat(2600).setLocal("Refractory Wax"),
@@ -970,7 +969,6 @@ public class MT {
 	WaxMagic                = wax           ( 8240, "WaxMagic"                                      , 200,  80, 200, 255).put(MD.FRMB, MAGICAL)                                                                                                                                                                                                                                                                                     .aspects(TC.PRAECANTIO  , 1).heat( 350).setLocal("Magic Wax"),
 	WaxAmnesic              = wax           ( 8280, "WaxAmnesic"                                    , 180,  70, 250, 255).put(MD.FRMB, MAGICAL)                                                                                                                                                                                                                                                                                     .aspects(TC.STRONTIO    , 1).heat( 350).setLocal("Amnesic Wax"),
 	WaxSoulful              = wax           ( 8281, "WaxSoulful"                                    ,  90,  40,  10, 255).put(MD.FRMB, MAGICAL)                                                                                                                                                                                                                                                                                     .aspects(TC.SPIRITUS    , 1).heat( 350).setLocal("Soulful Wax"),
-	
 	
 	Graphite                = oredustdcmp   ( 9174, "Graphite"              , SET_DULL              , 128, 128, 128, 255).put(BLACKLISTED_SMELTER, BRITTLE, MORTAR, STICKS)                                                                                             .uumMcfg( 0, C              , 1*U)                                                                                                                          .qual(1, 5.0, 32, 2).setSmelting(C, U2).setBurning(Ash, U4).heat(1700, C.mBoilingPoint),
 	Niter                   = oredustcent   ( 8206, "Niter"                 , SET_FLINT             , 255, 200, 200, 255).put(G_GEM_ORES, FLAMMABLE, BRITTLE, MORTAR, CRYSTAL, "Nitre")                                                                                 .uumMcfg( 0, KNO3           , 1*U, NaNO3            , 1*U)                                                                                                  .heat(607),
