@@ -17,6 +17,7 @@ Nothing
 Now MultiBlock Heat Exchanger has 3 texture to build.
 TungstenSteel/Tungsten/Tantalum Hafnium Carbide.
 They can output HU:16384/32768/131072.
+[ADDED]Ethane for cracking product.
 [ADDED]Frost Proof Machine Casing for Cryo Distillation Tower build.
 [ADDED]Thermomechanical block for Heat Exchanger
 [ADDED]Reactors can use Distilled Water as Coolant, but that uses a different System so beware.From Original GT6 Version
